--- a/config/locales/models/ja.yml
+++ b/config/locales/models/ja.yml
@@ -8,6 +8,7 @@ ja:
           has_many: "%{record}が存在しているので削除できません"
     models:
       user: ユーザー
+      article: 記事
     attributes:
       user:
         name: ユーザーID
@@ -16,3 +17,7 @@ ja:
         password: パスワード
         password_confirmation: パスワード(確認用)
         nick_name: ニックネーム
+      article:
+        title: タイトル
+        overview: 概要
+        content: 本文
