--- a/config/database.yml.org
+++ b/config/database.yml.org
@@ -80,8 +80,6 @@ test:
 #
 production:
   <<: *default
-  database: <%= ENV['DB_DATABASE'] %>
-  username: <%= ENV['DB_USERNAME'] %>
-  password: <%= ENV['DB_PASSWORD'] %>
-  host: <%= ENV['DB_HOST']%>
-  port: <%= ENV['DB_PORT']%>
+  database: asobi_app_production
+  username: asobi_app
+  password: <%= ENV['ASOBI_APP_DATABASE_PASSWORD'] %>
